tests/base/parser/bad/stmts_t-id-bind-id-with.scilla
scilla_version 0

contract Test
(map : Map Uint128 Bool)

transition arbitrary ()
  id <- map{1}
end
